# MyOS

./: .gitignore  BUILDING.md  CHECKLIST.md  CLAUDE.md  LICENSE  MANIFESTO.md  NEXT_STEPS.md  README-zh.md  README.md  ROADMAP.md  pyproject.toml  start
.claude/commands/: myos-decide.md  myos-metrics.md  myos-review.md  myos-task.md
.github/workflows/: ci.yml
core/: BOUNDARY_RULES.md  GLOSSARY.md  ONTOLOGY.md  ROUTER.md  RULES.md  SCHEMAS.md
docs/: ARTIFACT_AUTHORITY_LIFECYCLE.md  CONTENT_DIRECTION_CONTEXT_REFERENCE_SLICE.md  CONTENT_DIRECTION_PROPOSAL_SLICE.md  EXPLICIT_PROPOSAL_EMITTER_SLICE.md  MYOS_POSITIONING_CHARTER.md  OPERATOR_MODEL_THREE_CONSOLES.md  REVIEW_OBJECT_BOUNDARY_SLICE.md  STATE_TASK_MATCHING_HEURISTIC.md  WORKSPACE_CONTENT_DIRECTION_STARTER_SLICE.md
modules/_template/: MODULE.md  module.manifest.yaml
modules/cognition/: MODULE.md  module.manifest.yaml
modules/content/: MODULE.md  module.manifest.yaml
modules/decision/: MODULE.md  module.manifest.yaml
modules/memory/: MODULE.md  module.manifest.yaml
modules/principles/: MODULE.md  module.manifest.yaml
modules/profile/: MODULE.md  module.manifest.yaml
orchestrator/: README.md
orchestrator/config/: providers.yaml  retrieval.json  routes.json  runtime.yaml
orchestrator/logs/: metrics_snapshots.jsonl  owner_reports.jsonl  (+3 more)
routines/: CADENCE.md  cadence.yaml
scripts/: append_jsonl.sh  context_bundle.sh  migrate_classification.py  run_cycle.sh
tests/: test_cli.py  test_guided_decide.py  test_guided_explore.py  test_guided_learn.py  test_mode.py  test_protocol.py  test_router.py
(+172 files in other folders)
