[project]
name = "personal-core-os"
version = "0.1.0"
description = "Personal Core OS orchestrator environment"
authors = [
    {name = "zdx",email = "yootaoo@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "mcp[cli]>=1.0.0",
]

[project.scripts]
myos = "myos.cli:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "myos", from = "src" }
]

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"

[tool.pytest.ini_options]
pythonpath = [
    "src",
    "orchestrator/src"
]
